<resources>
    <string-array name="spInventory">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string name="app_name">Inventory</string>
    <string name="tvUser">User Name/email address</string>
    <string name="edUser">User</string>
    <string name="tvPassword">Password</string>
    <string name="password">Password</string>
    <string name="chRemember">Remember me</string>
    <string name="btSingUp">Sign Up</string>
    <string name="btSignUp">Sign Up</string>
    <string name="btSignIn">Sign In</string>
    <string name="btGoogle">Google</string>
    <string name="btFacebook">Login With Facebook</string>
    <string name="tvOther">Or Signup with...</string>
    <string name="btInvetory">Invetorio</string>
    <string name="btSectores">Sectores</string>
    <string name="btProductos">Productos</string>
    <string name="btPerfil">Perfil</string>
    <string name="btAjustes">Ajustes</string>
    <string name="btDependencias">Dependencias</string>
    <string name="tiedUser">Username</string>
    <string name="tiedPassword">Password</string>
    <string name="tiedEmail">Example@Email.com</string>
    <string name="tiedPasswordRep">Confirm Password</string>
    <string name="name">Nombre</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="tvShortName">Nombre Corto</string>
    <string name="tvLongName">Nombre</string>
    <string name="tvInventory">Inventario</string>
    <string name="errNameEmpty">ERROR: Needed Long Name</string>
    <string name="errShortNameEmpty">ERROR: Needed Short Name</string>
    <string name="errDescriptionEmpty">ERROR: Needed Description</string>
    <string name="errDependencyExists">ERROR: Dependency already exists</string>
    <string name="errDependencyNoEdited">ERROR: Cannot be edited</string>
    <string name="btnOk">Accept</string>
    <string name="title_delete">Delete</string>
    <string name="message_delete">You want to delete :</string>
    <string name="snkBarUndo">Undo</string>
    <string name="snkBarMessageDeleted">Deleted :</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_orderbyname">Order by name</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dependency">Dependency</string>
    <string name="menu_sections">Sections</string>
    <string name="menu_product">Products</string>
    <string name="MenuActions">Actions Menu</string>
    <string name="err_duplicate_dependency">ERROR: Dependency already exists in Dependencies</string>
    <string name="channel_name">Inventorty</string>
    <string name="channel_description">Channel por defecto Inventory</string>
    <string name="tvDescription">Descripción</string>
    <string name="tvDependency">Dependency</string>
    <string name="err_not_correct_section">ERROR: Not correct initialization of section</string>
</resources>
