<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentSectionManage"
    tools:context=".ui.section.SectionActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvShortName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/tvShortName"
            app:layout_constraintTop_toBottomOf="@+id/tvShortName" />

        <TextView
            android:id="@+id/tvLongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvLongName"
            app:layout_constraintStart_toStartOf="@+id/edShortName"
            app:layout_constraintTop_toBottomOf="@+id/edShortName" />

        <EditText
            android:id="@+id/edLongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/tvLongName"
            app:layout_constraintTop_toBottomOf="@+id/tvLongName" />

        <TextView
            android:id="@+id/tvDependenvy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvDependency"
            app:layout_constraintStart_toStartOf="@+id/edLongName"
            app:layout_constraintTop_toBottomOf="@+id/edLongName" />

        <Spinner
            android:id="@+id/spDependency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spinner"
            app:layout_constraintTop_toBottomOf="@+id/tvDependenvy" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvDescription"
            app:layout_constraintStart_toStartOf="@+id/spDependency"
            app:layout_constraintTop_toBottomOf="@+id/spDependency" />

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spinner"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/tvDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabManageSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:layout_margin="@dimen/fabMargin"
        android:src="@drawable/ic_add_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>